# little-lemon

backend/: pyproject.toml
backend/little_lemon_bservice/: manage.py
backend/little_lemon_bservice/api/: serializers.py  urls.py  utils.py  views.py
backend/little_lemon_bservice/little_lemon_bservice/: asgi.py  settings.py  urls.py  wsgi.py
backend/little_lemon_bservice/markdown_files/: biology_cell.md  cm.md
little-lemon/: app.json  package-lock.json  package.json
little-lemon/app/: _layout.tsx  index.tsx
little-lemon/app/(tabs)/: _layout.tsx  home.tsx  leaderboard.tsx
little-lemon/assets/markdown/: biology_cell.md
little-lemon/components/: Button.tsx  CustomHeader.tsx  MarkdownRenderer.tsx  MarkdownRendererv1.tsx  ParallaxScrollView.tsx
